--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><title>Jeremy Wood</title><link rel="icon" href="favicon.ico"><script defer="defer" src="main.js"></script><link rel="icon" href="favicon.ico"><script defer="defer" src="main.js"></script><link rel="icon" href="favicon.ico"><script defer="defer" src="main.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <title>Jeremy Wood</title>
+    <link rel="icon" href="favicon.ico" />
+    <script defer="defer" src="main.js"></script>
+    <link rel="icon" href="favicon.ico" />
+    <script defer="defer" src="main.js"></script>
+    <link rel="icon" href="favicon.ico" />
+    <script defer="defer" src="main.js"></script>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
